# CML_AMP_LLM_Fine_Tuning_Studio

./: .gitignore  .project-metadata.yaml  DEVELOPMENT.md  NOTICE  README.md  alembic.ini  axolotl_config.yaml  axolotl_config_updated.yaml  cdsw-build.sh  hello.py  main.py  pyproject.toml  requirements-inference.txt  requirements.txt  setup.py  test-catalog.yaml  test.yaml  test_config.yaml  test_evaluator.py  test_surya.yaml
.app/: state.db  state.db-journal  state.json
.streamlit/: config.toml
archive/: test.py
data/: project_defaults.json
db_migrations/: env.py
docs/: techinical_overview.md  upgrading_finetuning_studio.md  user_guide.md
eval/: configs.py  data_loader.py  eval_job.py  make_peft_pipeline.py  mlflow_driver.py  mlflow_logger.py
examples/: examples-requirements.txt
ft/: accelerate.py  adapter.py  adapters.py  app.py  axolotl_config.py  client.py  cml.py  cml_model_export.py  configs.py  consts.py  databse_ops.py  dataset.py  datasets.py  evaluation.py  export.py  fine_tune.py  fine_tune_axolotl.py  fine_tune_base_script.py  initialize_db.py  job.py  jobs.py  mlflow.py  mlflow_evaluation_base_script.py  model.py  models.py  peft_adapter.py  pipeline.py  prompt.py  prompts.py  service.py  state.py  utils.py  venv_utils.py
migrations/: migrations_readme.txt
pgs/: database.py  datasets.py  deploy.py  evaluate.py  export.py  export_jobs.py  feedback.py  fine_tuning.py  home.py  jobs.py  mlflow.py  mlflow_jobs.py  models.py  prompts.py  sample_ticketing_agent_app_embed.py  streamlit_utils.py  train_adapter.py  view_datasets.py  view_models.py  (+1 more)
(+94 files in other folders)
