[tool.autopep8]
max_line_length = 120
in-place = true
recursive = true
aggressive = 3
[project]
name = "cdsw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate==0.33.0",
    "alembic==1.14.0",
    "autoflake==2.3.1",
    "autopep8==2.3.1",
    "bitsandbytes==0.43.3",
    "datasets==2.20.0",
    "evaluate==0.4.1",
    "exceptiongroup==1.2.2",
    "gradio==3.50.2",
    "grpcio==1.65.4",
    "grpcio-tools==1.65.4",
    "huggingface-hub==0.28.0",
    "loralib==0.1.1",
    "mlflow==2.15.1",
    "nltk==3.9.1",
    "peft==0.12.0",
    "plotly==5.23.0",
    "protobuf==5.27.3",
    "pydantic>=2.6.3",
    "pytest==8.2.2",
    "pytest-cov==5.0.0",
    "rouge-score==0.1.2",
    "scipy==1.11.1",
    "sentencepiece==0.2.0",
    "setfit==1.0.3",
    "setuptools==74.1.0",
    "streamlit==1.37.0",
    "streamlit-aggrid==1.0.5",
    "streamlit-navigation-bar==3.3.0",
    "textstat==0.7.4",
    "tiktoken==0.7.0",
    "torch==2.3.1",
    "torchvision==0.18.1",
    "transformers==4.44.0",
    "trl==0.9.6",
]
